<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateTime"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:text="@string/max"
            android:textSize="16sp" />

        <TextView
            android:layout_toEndOf="@+id/maxTempLabel"
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_toEndOf="@+id/maxTemp"
            android:id="@+id/minTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:text="@string/min"
            android:textSize="16sp" />

        <TextView
            android:layout_toEndOf="@+id/minTempLabel"
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_toStartOf="@+id/windSpeed"
            android:id="@+id/windSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:text="@string/wind_speed"
            android:textSize="16sp" />

        <TextView
            android:layout_alignParentEnd="true"
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTemp"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_alignParentEnd="true"
            android:layout_toStartOf="@+id/windSpeed"
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:layout_below="@+id/descriptionLabel"
            android:layout_alignParentEnd="true"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>